update: fix conflict module